--- a/glumci.html
+++ b/glumci.html
@@ -203,14 +203,14 @@
 
             <!-- ============== BANNER ================ -->
             <div class="col-md-2">
-                <a href="" class="d-none d-md-block">
+                <a href="https://www.imdb.com/title/tt0770828/" target="_blank" class="d-none d-md-block">
                     <img src="images/banner1.jpg" alt="banner" class="w-100 pb-2">
                 </a>
-                <a href="" class="d-none d-md-block">
+                <<a href="https://www.imdb.com/title/tt0903624/" target="_blank" class="d-none d-md-block">
                     <img src="images/banner2.jpg" alt="banner" class="w-100 pb-2">
                 </a>
                 <a href="" class="d-md-none pt-5">
-                    <img src="images/banner-small.JPG" alt="banner" class="w-100 py-5">
+                    <img src="images/ETF-Logo.png" alt="banner" class="w-100 py-5">
                 </a>
             </div>
         </div>
