--- a/o-festivalu.html
+++ b/o-festivalu.html
@@ -185,17 +185,14 @@
 
             <!-- ============== BANNER ================ -->
             <div class="col-md-2">
-                <a href="" class="d-none d-md-block">
+                <a href="https://www.imdb.com/title/tt0770828/" target="_blank" class="d-none d-md-block">
                     <img src="images/banner1.jpg" alt="banner" class="w-100 pb-2">
                 </a>
-                <a href="" class="d-none d-md-block">
+                <<a href="https://www.imdb.com/title/tt0903624/" target="_blank" class="d-none d-md-block">
                     <img src="images/banner2.jpg" alt="banner" class="w-100 py-2">
                 </a>
-                <a href="" class="d-none d-md-block d-lg-none d-xl-block">
-                    <img src="images/banner3.jpg" alt="banner" class="w-100 py-2">
-                </a>
-                <a href="" class="d-md-none">
-                    <img src="images/banner-small.JPG" alt="banner" class="w-100 py-3">
+                <a href="https://www.etf.bg.ac.rs/" target="_blank" class="d-md-none">
+                    <img src="images/ETF-Logo.png" alt="banner" class="w-100 py-3">
                 </a>
             </div>
         </div>
